# Atlas

./: .gitignore
01_System/: 00.01.Architecture_Manifest_LLM.md  01.Development_Standards.md.md  03.ProjectLog.md  Makefile  bootstrap_pi.sh
01_System/01_Access/Tailscale/: readme.md
01_System/01_Access/cloudflared/: compose.yml
02_Platform/01_Postgres/: compose.yml
02_Platform/01_Postgres/ObjectSchemas/: foodtracker_schema.sql  workout_schema.sql
02_Platform/03_ErrorHandling/: logging.py
02_Platform/MCPGateway/: Dockerfile  compose.yml  run_local.py  test_local.py
02_Platform/MCPGateway/app/: main.py
02_Platform/UI/: 02_UI.md
02_Platform/UI/src/: App.tsx  index.css
02_Platform/UI/src/components/: TableView.tsx
03_Application/: 05_WorkoutTracker.md
03_Application/FoodTracker/: 07_FoodTracker.md  tools.py
03_Application/WorkoutTracker/: Dockerfile  README.md  compose.yml  pyproject.toml  run_local.ps1
03_Application/WorkoutTracker/app/: database.py  main.py  models.py
03_Application/WorkoutTracker/templates/: base.html  detail.html  list.html  new.html
